[gd_scene load_steps=58 format=3 uid="uid://fxmqcn27ijx8"]

[ext_resource type="Script" path="res://Entities/Enemies/Sentry/basic_enemy_test.gd" id="1_0jvgj"]
[ext_resource type="Texture2D" uid="uid://cgjbwbi1na5v7" path="res://Assets/free_skeleton_v002/Sprites/Skeleton.png" id="2_prfag"]
[ext_resource type="PackedScene" uid="uid://dt1gsskrc8dh6" path="res://Systems/nav_sys.tscn" id="4_07tqk"]
[ext_resource type="Texture2D" uid="uid://dbcawf6lgvce7" path="res://Assets/Particles/SMALL SMOKE.png" id="4_i674g"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7qql4"]
light_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tiyjh"]
size = Vector2(44, 21)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7bjgk"]
animation = &"Idle_south"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1cevi"]
animation = &"Idle_north"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tcxol"]
animation = &"Idle_west"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h0qvo"]
animation = &"Idle_east"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_h7rmb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7bjgk")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1cevi")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_tcxol")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_h0qvo")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_um6uu"]
animation = &"Idle_east"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0yetw"]
animation = &"Idle_north"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1ylkd"]
animation = &"Idle_south"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kfn13"]
animation = &"Idle_west"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_73hku"]
animation = &"Walk_South"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1gl2v"]
animation = &"Walk_North"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e2yj2"]
animation = &"Walk_West"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x3t8s"]
animation = &"Walk_East"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_kppj2"]
blend_point_0/node = SubResource("AnimationNodeAnimation_73hku")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1gl2v")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_e2yj2")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_x3t8s")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_06cql"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jm06o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tgo0k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tp4we"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sc54t"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ibwie"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rswva"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iy856"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wlrb0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m2v1n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nbmpu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r4nry"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_egkmj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cy3ur"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xngke"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5lgo7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x3n53"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hhbyh"]
states/End/position = Vector2(497, 149.5)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_h7rmb")
states/Idle/position = Vector2(-68, -194.5)
states/Idle_east/node = SubResource("AnimationNodeAnimation_um6uu")
states/Idle_east/position = Vector2(523, 313)
states/Idle_north/node = SubResource("AnimationNodeAnimation_0yetw")
states/Idle_north/position = Vector2(348, 204)
states/Idle_south/node = SubResource("AnimationNodeAnimation_1ylkd")
states/Idle_south/position = Vector2(348, 430.5)
states/Idle_west/node = SubResource("AnimationNodeAnimation_kfn13")
states/Idle_west/position = Vector2(163, 313)
states/Start/position = Vector2(523, 430.5)
states/Walking/node = SubResource("AnimationNodeBlendSpace2D_kppj2")
states/Walking/position = Vector2(348, 313)
transitions = ["Walking", "Idle_north", SubResource("AnimationNodeStateMachineTransition_06cql"), "Walking", "Idle_west", SubResource("AnimationNodeStateMachineTransition_jm06o"), "Walking", "Idle_east", SubResource("AnimationNodeStateMachineTransition_tgo0k"), "Walking", "Idle_south", SubResource("AnimationNodeStateMachineTransition_tp4we"), "Idle_west", "Walking", SubResource("AnimationNodeStateMachineTransition_sc54t"), "Idle_north", "Walking", SubResource("AnimationNodeStateMachineTransition_ibwie"), "Idle_east", "Walking", SubResource("AnimationNodeStateMachineTransition_rswva"), "Idle_south", "Walking", SubResource("AnimationNodeStateMachineTransition_iy856"), "Start", "Idle_east", SubResource("AnimationNodeStateMachineTransition_wlrb0"), "Idle_south", "Idle_west", SubResource("AnimationNodeStateMachineTransition_m2v1n"), "Idle_west", "Idle_north", SubResource("AnimationNodeStateMachineTransition_nbmpu"), "Idle_north", "Idle_east", SubResource("AnimationNodeStateMachineTransition_r4nry"), "Idle_east", "Idle_south", SubResource("AnimationNodeStateMachineTransition_egkmj"), "Idle_south", "Idle_east", SubResource("AnimationNodeStateMachineTransition_cy3ur"), "Idle_east", "Idle_north", SubResource("AnimationNodeStateMachineTransition_xngke"), "Idle_north", "Idle_west", SubResource("AnimationNodeStateMachineTransition_5lgo7"), "Idle_west", "Idle_south", SubResource("AnimationNodeStateMachineTransition_x3n53")]
graph_offset = Vector2(-158, -2)

[sub_resource type="Animation" id="Animation_0pk5s"]
resource_name = "Idle_east"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_brw5n"]
resource_name = "Idle_north"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_8y5xq"]
resource_name = "Idle_south"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_j4li5"]
resource_name = "Idle_west"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 4)]
}

[sub_resource type="Animation" id="Animation_em5vs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 4)]
}

[sub_resource type="Animation" id="Animation_2xoa8"]
resource_name = "Walk_East"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_4ipuf"]
resource_name = "Walk_North"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_7cs02"]
resource_name = "Walk_South"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_8bt6c"]
resource_name = "Walk_West"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uaykp"]
_data = {
"Idle_east": SubResource("Animation_0pk5s"),
"Idle_north": SubResource("Animation_brw5n"),
"Idle_south": SubResource("Animation_8y5xq"),
"Idle_west": SubResource("Animation_j4li5"),
"RESET": SubResource("Animation_em5vs"),
"Walk_East": SubResource("Animation_2xoa8"),
"Walk_North": SubResource("Animation_4ipuf"),
"Walk_South": SubResource("Animation_7cs02"),
"Walk_West": SubResource("Animation_8bt6c")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jwxkm"]
atlas = ExtResource("4_i674g")
region = Rect2(0, 0, 15, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvgts"]
atlas = ExtResource("4_i674g")
region = Rect2(15, 0, 15, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbclf"]
atlas = ExtResource("4_i674g")
region = Rect2(30, 0, 15, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wyhn"]
atlas = ExtResource("4_i674g")
region = Rect2(45, 0, 15, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b0mm"]
atlas = ExtResource("4_i674g")
region = Rect2(60, 0, 15, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_vior4"]
atlas = ExtResource("4_i674g")
region = Rect2(75, 0, 15, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_u536v"]
atlas = ExtResource("4_i674g")
region = Rect2(90, 0, 15, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_kv5ds"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwxkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvgts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wyhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b0mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vior4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u536v")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Dust_Trail",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fxs55"]
radius = 18.0
height = 50.0

[node name="StaringEnemy" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_0jvgj")

[node name="Shadow" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = 24.0
offset_right = 20.0
offset_bottom = 33.0
color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_7qql4")
scale = Vector2(-4, 4)
texture = ExtResource("2_prfag")
hframes = 4
vframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 23)
shape = SubResource("RectangleShape2D_tiyjh")

[node name="RunafterTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_hhbyh")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Walking/blend_position = Vector2(-0.0013411, 0.973856)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uaykp")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-30, 15)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_kv5ds")
animation = &"Dust_Trail"

[node name="NavSys" parent="." instance=ExtResource("4_07tqk")]

[node name="CollisionShape2D" parent="NavSys/RotatoNodo/StrikeBox" index="0"]
position = Vector2(41, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1, 15)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fxs55")

[node name="StrikingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RunafterTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="NavSys/RotatoNodo/Detection" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="NavSys/RotatoNodo/Detection" to="." method="_on_detection_area_exited"]
[connection signal="area_entered" from="NavSys/RotatoNodo/InrangeSB" to="." method="_on_inrange_sb_area_entered"]
[connection signal="timeout" from="StrikingTimer" to="." method="_on_striking_timer_timeout"]

[editable path="NavSys"]
